--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VoyageContextConnection": "Server=localhost;Database=db-viaggi;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
